Closed Bug 210128 Opened 21 years ago Closed 21 years ago

Lists with Roman numerals don't fail gracefully for large numbers

Categories

(Core :: Internationalization, defect)

x86
Windows 2000
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: smontagu, Assigned: smontagu)

References

()

Details

Attachments

(1 file)

The algorithm for numbered lists with Roman numerals in nsBulletFrame.cpp only works up to 3999. Higher numbers display garbage. (All other values for list-style-type either fall back to decimal above some value or go on producing numerals in the same system up to MAXINT32. I can't vouch that *every* system is working correctly, but there is no obvious garbage except in the cases of upper-roman and lower-roman)
Attached patch PatchSplinter Review
Attachment #126137 - Flags: superreview+
Attachment #126137 - Flags: review+
Fix checked in.
Status: NEW → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: