Bail out gracefully from numbered lists not expressible in Roman numerals. Bug 210128, rs=bzbarsky.